# artifacts/api-server/src/routes/index.ts
@@ -4,6 +4,7 @@ import { annunciRouter } from "./annunci";
 import { categorieRouter } from "./categorie";
 import { statsRouter } from "./stats";
 import { forumRouter } from "./forum";
+import { profiloRouter } from "./profilo";
 
 const router: IRouter = Router();
 
@@ -12,5 +13,6 @@ router.use("/annunci", annunciRouter);
 router.use("/categorie", categorieRouter);
 router.use("/stats", statsRouter);
 router.use("/forum", forumRouter);
+router.use("/profilo", profiloRouter);
 
 export default router;
